<resources>
    <string name="app_name">Parliamentmembers</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome!</string>
    <string name="info">Parliamentmembers is an application where you can search different members of finnish parliament. By pressing the button below you can start finding information about different MPs. Happy searching!</string>
    <string name="start">Start</string>
    <string name="center_right">Center-right</string>
    <string name="members">Members</string>
    <string name="kokoomus">Kansallinen kokoomus</string>
    <string name="mp_img_desc">Image of parliament member</string>
    <string name="by_pressing_the_button_below_you_can_start_searching">By pressing the start button below you can start searching!</string>
    <string name="create_a_new_note">Create a new note</string>
    <string name="add_a_new_note">Add a new note</string>
    <string name="add_note">Add note</string>
    <string name="write_your_note_here">Write your note here...</string>
    <string name="thumb_down">thumb down</string>
    <string name="thumb_up">thumb up</string>
</resources>